syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.fossa";

import "common.proto";
import "google/protobuf/wrappers.proto";

message NewReactionRequest {
  string feedId = 1;
  string userId = 2;
  repeated ReactionType reactionTypes = 3;
}

message RevokeReactionRequest {
  string feedId = 1;
  string userId = 2;
  repeated ReactionType reactionTypes = 3;
}

message RetrieveReactionsByFeedIdRequest {
  string feedId = 1;
  PageRequest pageRequest = 2;
}

message ReactionResponse {
  CommonStatus status = 1;
  ReactionMessage reaction = 2;
}

message ReactionsResponse {
  CommonStatus status = 1;
  PageResponse pageResponse = 2;
  repeated ReactionMessage reactions = 3;
}

service CommentService {
  rpc CreateReaction(NewReactionRequest) returns (ReactionResponse) {};
  rpc RevokeReaction(RevokeReactionRequest) returns (ReactionResponse) {};
  rpc RetrieveReactionsByFeedId(RetrieveReactionsByFeedIdRequest) returns (ReactionsResponse) {};
}